--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div style="background-color:gold;">
       <table>
         <tr>
-          <td> <img src="images/school_logo_best.png" width="150" style="margin-left: 1cm; margin-top: 1cm;"
+          <td> <img src="static/images/school_logo_best.png" width="150" style="margin-left: 1cm; margin-top: 1cm;"
               alt="school_logo"></td>
           <td>
             <pre>                         </pre>
